--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ɈĦ Møvɨɇ Ħᵾƀ</title>
+    <title>𝑭𝒍𝒊𝒙𝒊𝒇𝒚</title>
   
   <!-- Head সেকশনে Orbitron ফন্ট লোড -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
@@ -1953,7 +1953,7 @@ const countdownFunction = setInterval(function() {
         <div class="header-container">
           <a href="https://jhmhub.jhtone.site/" class="logo">
     <div class="logo-text">
-        <h2>ɈĦ Møvɨɇ Ħᵾƀ</h2>
+        <h2>𝑭𝒍𝒊𝒙𝒊𝒇𝒚</h2>
     </div>
 </a>
             
@@ -3070,7 +3070,7 @@ window.history.replaceState({}, document.title, clean_uri);
     <p style="margin: 0; line-height: 1.2;">
   Copyright © 2025 
   <a href="https://jhmhub.jhtone.site/" target="_blank" rel="noopener" style="color: #4fc3f7; text-decoration: none; font-family: 'Jost', sans-serif;">
-    𝐉𝐇 𝐌𝐨𝐯𝐢𝐞 𝐇𝐮𝐛
+    𝑭𝒍𝒊𝒙𝒊𝒇𝒚
   </a> Team!<br>
   Designed by 
   <a href="https://web.facebook.com/jamiul2168" target="_blank" rel="noopener" style="color: #4fc3f7; text-decoration: none; font-family: 'Jost', sans-serif;">
@@ -3364,5 +3364,6 @@ window.history.replaceState({}, document.title, clean_uri);
 
    
 </body>
+
 
 </html>
