--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝑭𝒍𝒊𝒙𝒊𝒇𝒚</title>
+    <title>𝐅𝐥𝐢𝐱𝐢𝐟𝐲</title>
   
   <!-- Head সেকশনে Orbitron ফন্ট লোড -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
@@ -3367,3 +3367,4 @@ window.history.replaceState({}, document.title, clean_uri);
 
 
 </html>
+
