--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@ body.direct-link .main-container {
 
   
   <meta name="theme-color" content="#000000"/>
-<link rel="manifest" href="https://jamiul2168.github.io/prm-jhmhub-pwa/manifest.json">
+<link rel="manifest" href="https://jamiul2168.github.io/jhmhub-pwa/manifest.json">
   
   
   
@@ -3367,5 +3367,6 @@ window.history.replaceState({}, document.title, clean_uri);
 
 
 </html>
+
 
 
