--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fłɨxɨfɏ.ɉħŧønɇ.sɨŧɇ</title>
+    <title>𝐟𝐥𝐢𝐱𝐢𝐟𝐲.𝐣𝐡𝐭𝐨𝐧𝐞.𝐬𝐢𝐭𝐞</title>
   
   <!-- Head সেকশনে Orbitron ফন্ট লোড -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
@@ -1953,7 +1953,7 @@ const countdownFunction = setInterval(function() {
         <div class="header-container">
           <a href="https://jhmhub.jhtone.site/" class="logo">
     <div class="logo-text">
-        <h2>Fłɨxɨfɏ.ɉħŧønɇ.sɨŧɇ</h2>
+        <h2>𝐟𝐥𝐢𝐱𝐢𝐟𝐲.𝐣𝐡𝐭𝐨𝐧𝐞.𝐬𝐢𝐭𝐞</h2>
     </div>
 </a>
             
@@ -3367,6 +3367,7 @@ window.history.replaceState({}, document.title, clean_uri);
 
 
 </html>
+
 
 
 
