--- a/index.html
+++ b/index.html
@@ -1951,7 +1951,7 @@ const countdownFunction = setInterval(function() {
     <!-- Liquid Glass Header -->
     <header class="app-header">
         <div class="header-container">
-          <a href="https://jhmhub.jhtone.site/" class="logo">
+          <a href="https://flixify.jhtone.site/" class="logo">
     <div class="logo-text">
         <h2>𝐟𝐥𝐢𝐱𝐢𝐟𝐲.𝐣𝐡𝐭𝐨𝐧𝐞.𝐬𝐢𝐭𝐞</h2>
     </div>
@@ -2147,7 +2147,7 @@ const countdownFunction = setInterval(function() {
 <script>
         // Configuration - Replace with your Apps Script URL
 const APP_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwg62hwK5qLamXFV1PdHW7XIWtA7euKCSQ7RHbDfU58dQ6hWRgMhR4LwtfSE4e12rjXEA/exec';
-const BASE_URL = 'jhmhub.jhtone.site';
+const BASE_URL = 'flixify.jhtone.site';
 
 document.addEventListener('DOMContentLoaded', function() {
     // DOM Elements
@@ -2910,7 +2910,7 @@ function createDownloadButton(url, title, screenshot, movie) {
     });
     
     document.getElementById('confirmPremium').addEventListener('click', function() {
-        window.open('https://prm.jhmhub.jhtone.site/', '_blank');
+        window.open('https://prm.flixify.jhtone.site/', '_blank');
         this.closest('.popup-overlay').style.display = 'none';
     });
 
@@ -3069,7 +3069,7 @@ window.history.replaceState({}, document.title, clean_uri);
   <div class="footer-content">
     <p style="margin: 0; line-height: 1.2;">
   Copyright © 2025 
-  <a href="https://jhmhub.jhtone.site/" target="_blank" rel="noopener" style="color: #4fc3f7; text-decoration: none; font-family: 'Jost', sans-serif;">
+  <a href="https://flixify.jhtone.site/" target="_blank" rel="noopener" style="color: #4fc3f7; text-decoration: none; font-family: 'Jost', sans-serif;">
     𝑭𝒍𝒊𝒙𝒊𝒇𝒚
   </a> Team!<br>
   Designed by 
@@ -3367,6 +3367,7 @@ window.history.replaceState({}, document.title, clean_uri);
 
 
 </html>
+
 
 
 
