--- a/index.html
+++ b/index.html
@@ -2146,7 +2146,7 @@ const countdownFunction = setInterval(function() {
   
 <script>
         // Configuration - Replace with your Apps Script URL
-const APP_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxOBtGoQzVWTv6fAWS4s1de7zin61A-CafxVLS__Tp4L_1Y_6rHPgzFSm7Qkic57-eEzg/exec?key=2168';
+const APP_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz6VCK6dSvVagr6q-RJIyFHqdZZHKsTVEHz7H9cgt2xbThnIpDRy2xUVZ4M5BXkPtW0sg/exec';
 const BASE_URL = 'flixify.jhtone.site';
 
 document.addEventListener('DOMContentLoaded', function() {
@@ -3367,6 +3367,7 @@ window.history.replaceState({}, document.title, clean_uri);
 
 
 </html>
+
 
 
 
